Fix CSS alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: 88vh;
+  height: 660px;
   display: flex;
   color: white;
   margin-top: 25px;
@@ -12,6 +12,8 @@
   background-color: #2E4158;
   padding: 25px 25px 0px 25px;
   overflow: visible;
+  position: relative;
+  height: 100%;
 }
 
 .PageSwitcher {
@@ -186,15 +188,17 @@ h1 {
 }
 
 .alert {
-  margin: auto auto;
-  width: 50%;
+  margin: auto;
+  width: 100%;
   padding: 20px;
   background-color: #f44336;
   color: white;
   opacity: 1;
   transition: opacity 0.6s;
-  position: relative;
   z-index: 100;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .alert.success {background-color: #4CAF50;}
